Error Mitigation/MagiCoder/Data/javax_naming_event/javax_naming_eventOutputResult.txt
Sample: NamingExceptionEvent_3
----------------------------------------------------------------
output:
./Data/javax_naming_event/javaFiles/NamingExceptionEvent_3.java:6: error: incompatible types: Object cannot be converted to EventContext
        NamingExceptionEvent event = new NamingExceptionEvent(new Object(), new NamingException("Test exception"));
                                                              ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error


================================================================

